Fix community gallery on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2502,58 +2502,6 @@ ul {
   color: #16a085;
 }
 
-.footer {
-  background-color: #ffffff;
-  padding: 45px 0 35px 0;
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 2.1px;
-}
-
-.footer-menu__item {
-  display: inline-block;
-  padding: 0 12px;
-}
-
-.footer-menu__item:first-of-type {
-  border-right: 1px solid #16a085;
-  padding-left: 0;
-}
-
-.footer-menu__item:last-of-type {
-  border-left: 1px solid #16a085;
-  padding-right: 0;
-}
-
-.footer-menu__link {
-  text-transform: uppercase;
-  transition: 0.1s ease-in-out;
-}
-
-.footer-menu__link:hover {
-  color: #16a085;
-}
-
-* {
-  font-family: "Nunito", sans-serif;
-}
-
-body {
-  background-color: #d9dde0;
-}
-
-.page-wrapper {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container,
-.row {
-  height: 100%;
-}
-
 .header {
   background-image: url(../images/hero.jpg);
   background-repeat: no-repeat;
@@ -2564,6 +2512,16 @@ body {
   max-height: 745px;
   color: #ffffff;
   text-align: center;
+}
+
+.social__item {
+  display: inline-block;
+  margin: 26px 8px;
+  transition: 0.1s ease-in-out;
+}
+
+.social__item:hover {
+  color: #bfbfbf;
 }
 
 .hero__title {
@@ -2581,16 +2539,6 @@ body {
   line-height: 20px;
   font-weight: 500;
   letter-spacing: 2.4px;
-}
-
-.social__item {
-  display: inline-block;
-  margin: 26px 8px;
-  transition: 0.1s ease-in-out;
-}
-
-.social__item:hover {
-  color: #bfbfbf;
 }
 
 .arrows__label {
@@ -2655,9 +2603,13 @@ body {
 }
 
 .community__gallery img {
-  max-width: 90%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .subscribe {
@@ -2746,5 +2698,57 @@ body {
   letter-spacing: 1.8px;
   margin-bottom: 26px;
   max-width: 840px;
+}
+
+.footer {
+  background-color: #ffffff;
+  padding: 45px 0 35px 0;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 2.1px;
+}
+
+.footer-menu__item {
+  display: inline-block;
+  padding: 0 12px;
+}
+
+.footer-menu__item:first-of-type {
+  border-right: 1px solid #16a085;
+  padding-left: 0;
+}
+
+.footer-menu__item:last-of-type {
+  border-left: 1px solid #16a085;
+  padding-right: 0;
+}
+
+.footer-menu__link {
+  text-transform: uppercase;
+  transition: 0.1s ease-in-out;
+}
+
+.footer-menu__link:hover {
+  color: #16a085;
+}
+
+* {
+  font-family: "Nunito", sans-serif;
+}
+
+body {
+  background-color: #d9dde0;
+}
+
+.page-wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container,
+.row {
+  height: 100%;
 }
 /*# sourceMappingURL=style.css.map */
