--- a/sass/_community.scss
+++ b/sass/_community.scss
@@ -32,9 +32,11 @@
     }
     &__gallery {
         & img {
-            max-width: 90%;
+            max-width: 100%;
             margin: 0 auto;
             padding: 0;
+            display: flex;
+            align-self: center;
         }
     }
 }
